# shakespeare-fun

./: .gitignore  README.md  converse.py  pyproject.toml
shakespeare/: character.py  db.py
